--- a/templates/ip.gohtml
+++ b/templates/ip.gohtml
@@ -1,6 +1,8 @@
-* Одна из точек доступна *
-  City:  {{ .CityName }}
-  Location:  {{ .GeoIp.Location.Latitude }} {{ .GeoIp.Location.Longitude }}
-Быстрый поиск истории:
-#T{{ .CityName }} 🔍
+🔌 Одна из точек доступна 🔌
 
+Город: {{ .CityName }} {{ .CitySubdivision }}
+Часовой пояс: {{ .TimeZone }}
+
+🔍:
+#{{ .CityName }}
+https://www.google.com/maps?q={{ .GeoIp.Location.Latitude }},{{ .GeoIp.Location.Longitude }}
